--- a/notebooks/03_distances_kernels_alignment.ipynb
+++ b/notebooks/03_distances_kernels_alignment.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,39 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'algorithm': 'brute',\n",
-       " 'distance': DistFromAligner(aligner=AlignerDTWfromDist(dist_trafo=ScipyDist(metric='mahalanobis'))),\n",
-       " 'distance_mtype': None,\n",
-       " 'distance_params': None,\n",
-       " 'leaf_size': 30,\n",
-       " 'n_jobs': None,\n",
-       " 'n_neighbors': 1,\n",
-       " 'pass_train_distances': False,\n",
-       " 'weights': 'uniform',\n",
-       " 'distance__aligner': AlignerDTWfromDist(dist_trafo=ScipyDist(metric='mahalanobis')),\n",
-       " 'distance__aligner__dist_trafo': ScipyDist(metric='mahalanobis'),\n",
-       " 'distance__aligner__open_begin': False,\n",
-       " 'distance__aligner__open_end': False,\n",
-       " 'distance__aligner__step_pattern': 'symmetric2',\n",
-       " 'distance__aligner__window_type': 'none',\n",
-       " 'distance__aligner__dist_trafo__colalign': 'intersect',\n",
-       " 'distance__aligner__dist_trafo__metric': 'mahalanobis',\n",
-       " 'distance__aligner__dist_trafo__metric_kwargs': None,\n",
-       " 'distance__aligner__dist_trafo__p': 2,\n",
-       " 'distance__aligner__dist_trafo__var_weights': None}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clf.get_params()"
    ]
@@ -152,20 +122,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'aligner'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sktime.registry import scitype\n",
     "\n",
@@ -178,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.3 General transformer signature - pairwise series transformers<a class=\"anchor\" id=\"section_3_4_3\"></a>"
+    "let's go through these - we've already seen classifiers."
    ]
   },
   {
@@ -186,18 +145,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pairwise series transformers model mathematical objects of signature `(Series, Series) -> float`, or, in mathematical notation, $$\\texttt{series} \\times\\texttt{series}\\rightarrow\\mathbb{R}$$\n",
-    "Common examples are distances between series, or (positive definite) kernels on series.\n",
-    "\n",
-    "Pairwise transformers have a parametric constructor, like any other `sktime` object. The transformation is achieved by the method `transform`, or, equivalently, for brevity, by a call to the constructed object.\n",
-    "\n",
-    "The method `transform` always returns a 2D `numpy.ndarray`, and can be called in multiple ways:\n",
-    "* with two `Series` arguments `X, X2`, in which case a 1 x 1 array is returned. Denote this function by `t(X, X2)`\n",
-    "* with two `Panel` arguments `X`, `X2`, in which case an `m x n` array is returned, where `m` is the number of instances in `X` and `n` is the number of instances in `X2`. The `(i,j)`-th entry corresponds to `t(Xi, X2j)`, where `Xi` is ths `i`-th `Series` in the `Panel` `X`, and `X2j` is the `j`-th `Series` in the `Panel` `X2`.\n",
-    "* with one `Series` and one `Panel` argument, in which case the `Series` is interpreted as a 1-element `Panel`, with return as above.\n",
-    "* with one single argument, `Series` or `Panel`, in which case `X` and `X2` are assumed to be the same as the one argument, with behaviour as above.\n",
-    "\n",
-    "We show these in a few examples below."
+    "## 3.2 Time series distances and kernels - pairwise panel transformers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2.1 Distances, kernels - general interface"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pairwise panel transformers produce one distance per pair of series in the panel:"
    ]
   },
   {
@@ -206,21 +170,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sktime.datatypes import get_examples\n",
+    "from sktime.datasets import load_osuleaf\n",
     "\n",
-    "# unviariate series used in the examples\n",
-    "X_series = get_examples(\"pd.Series\", \"Series\")[0]\n",
-    "X2_series = get_examples(\"pd.Series\", \"Series\")[1]\n",
-    "# panel used in the examples\n",
-    "X_panel = get_examples(\"pd-multiindex\", \"Panel\")[0]"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we construct the pairwise transformer with parameters. In this case, the pairwise transformer is a distance (the mean Euclidean distance):"
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_osuleaf(return_type=\"numpy3D\")\n",
+    "\n",
+    "X1 = X[:3]\n",
+    "X2 = X[5:10]"
    ]
   },
   {
@@ -230,10 +186,28 @@
    "outputs": [],
    "source": [
     "# constructing the transformer\n",
-    "from sktime.dists_kernels import AggrDist, ScipyDist\n",
+    "from sktime.dists_kernels import AggrDist\n",
     "\n",
-    "# mean of paired Euclidean distances\n",
-    "my_series_dist = AggrDist(ScipyDist(metric=\"euclidean\"))"
+    "# mean of paired Euclidean distances, over time points\n",
+    "mean_euc_dist = AggrDist.create_test_instance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2.shape"
    ]
   },
   {
@@ -241,7 +215,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can then evaluate the distance by `transform` or direct call:"
+    "X1 is panel with 3 series\n",
+    "X2 is panel with 5 series\n",
+    "\n",
+    "so a matrix of pairwise distances from X1 to X2 should have shape (3, 5)"
    ]
   },
   {
@@ -250,8 +227,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate the metric on two series, via transform\n",
-    "my_series_dist.transform(X_series, X2_series)"
+    "distmat = mean_euc_dist(X1, X2)\n",
+    "\n",
+    "# alternatively, via the transform method\n",
+    "distmat = mean_euc_dist.transform(X1, X2)\n",
+    "distmat"
    ]
   },
   {
@@ -260,8 +240,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate the metric on two series, by direct call - this is the same\n",
-    "my_series_dist(X_series, X2_series)"
+    "distmat.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "call or `transform` with a single arg is the same as passing twice:"
    ]
   },
   {
@@ -270,8 +257,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# evaluate the metric on two identical panels of three series\n",
-    "my_series_dist(X_panel, X_panel)"
+    "distmat_symm = mean_euc_dist.transform(X1)\n",
+    "distmat_symm"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pairwise panel transformers are `scikit-learn` / `scikit-base` interface compatible like everything else:"
    ]
   },
   {
@@ -280,20 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is the same as providing only one argument\n",
-    "my_series_dist(X_panel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# one series, one panel\n",
-    "# we subset X_panel to univariate, since the distance in question\n",
-    "#     cannot compare series with different number of variables\n",
-    "my_series_dist(X_series, X_panel[[\"var_1\"]])"
+    "mean_euc_dist.get_params()"
    ]
   },
   {
@@ -310,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_series_dist.get_params()"
+    "mean_euc_dist.get_params()"
    ]
   },
   {
@@ -318,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.4 General transformer signature - pairwise transformers<a class=\"anchor\" id=\"section_3_4_4\"></a>"
+    "### 3.2.2 Time series distances, kernels - composition"
    ]
   },
   {
@@ -326,17 +308,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`sktime` also provides functionality for pairwise transformers on tabular data, i.e., mathematical objects of signature `(DataFrame-row, DataFrame-row) -> float`, or, in mathematical notation, $$\\mathbb{R}^n \\times\\mathbb{R}^n\\rightarrow\\mathbb{R}$$.\n",
-    "Common examples are distances between series, or (positive definite) kernels on series.\n",
+    "pairwise transformers can be composed in a number of ways:\n",
     "\n",
-    "The behaviour is as for series transformers, evaluation is callable by `transform(X, X2)` or a direct call.\n",
+    "* arithmetics, e.g., addition, multiplication - use dunder `+`, `*` etc, or `CombinedDistance`\n",
+    "* subset to one or multiple columns - use `my_dist[colnames]` dunder\n",
+    "* sum or aggregate over univariate distance in multivariate panel, using `IndepDist` (also known as \"independent distance\")\n",
+    "* compose with series-to-series transformers - use `*` dunder or `make_pipeline`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_basic_motions\n",
     "\n",
-    "Inputs to `transform` of a pairwise (tabular) transformer must always be `pandas.DataFrame`.\n",
-    "The output is an `m x n` matrix, a 2D `np.ndarray`, with `m = len(X), n=len(X2)`. \n",
-    "The `(i,j)`-th entry corresponds to `t(Xi, X2j)`, where `Xi` is ths `i`-th row of `X`, and `X2j` is the `j`-th row of `X2`.\n",
-    "If `X2` is not passed, it defaults to `X`.\n",
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_basic_motions(return_type=\"numpy3D\")\n",
+    "X = X[:3]\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example 1: variable subsetting and arithmetic combinations\n",
     "\n",
-    "Example:"
+    "# first, mean euclidean distance as before\n",
+    "from sktime.dists_kernels import AggrDist\n",
+    "\n",
+    "mean_euc_dist = AggrDist.create_test_instance()\n",
+    "\n",
+    "# product of the distances on variables 2 and 5\n",
+    "prod_med_25 = mean_euc_dist[2] * mean_euc_dist[5]\n",
+    "prod_med_25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prod_med_25(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example 2: independent dynamic time warping distance\n",
+    "from sktime.alignment.dtw_python import AlignerDTW\n",
+    "from sktime.dists_kernels.compose_from_align import DistFromAligner\n",
+    "from sktime.dists_kernels.indep import IndepDist\n",
+    "\n",
+    "# dynamic time warping distance - this is multivariate\n",
+    "dtw_dist = DistFromAligner(AlignerDTW())\n",
+    "\n",
+    "# independent distance - by default IndepDist sums over univariate distances\n",
+    "indep_dtw_dist = IndepDist(dtw_dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indep_dtw_dist(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example 3: dynamic time warping distance on first differences\n",
+    "from sktime.transformations.series.difference import Differencer\n",
+    "\n",
+    "diff_dtw_distance = Differencer() * dtw_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_dtw_distance(X)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "some combinations may be available as efficient `numba` based distances.\n",
+    "\n",
+    "E.g., difference-then-dtw is available as the \"fixed\" `sktime` native implementation\n",
+    "`DtwDist(derivative=True)` in `sktime.dists_kernels.dtw`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 pairwise tabular transformers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3.1 pairwise tabular transformers - general interface"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pairwise tabular transformers transform pairs of ordinary tabular data, e.g., plain `pd.DataFrame`\n",
+    "\n",
+    "produce one distance per pair of rows"
    ]
   },
   {
@@ -350,6 +453,33 @@
     "# we retrieve some DataFrame examples\n",
     "X_tabular = get_examples(\"pd.DataFrame\", \"Series\")[1]\n",
     "X2_tabular = get_examples(\"pd.DataFrame\", \"Series\")[1][0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# just an ordinary DataFrame, no time series\n",
+    "X_tabular"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X2_tabular"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "example: pairwise Euclidean distance between rows"
    ]
   },
   {
@@ -380,7 +510,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.5 Searching for transformers<a class=\"anchor\" id=\"section_3_4_5\"></a>"
+    "### 3.3.2 constructing pairwise time series transformers from tabular ones"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"simple\" time series distances can be obtained directly from tabular transformers:\n",
+    "\n",
+    "* aggregating the tabular distance matrix, from two individual time series - `AggrDist`\n",
+    "* flattening the time series to tabular, and then computing the distance - `FlatDist`\n",
+    "\n",
+    "these are important \"baseline\" distances!\n",
+    "\n",
+    "Both can be used on `sktime` pairwise transformers and `sklearn` pairwise transformers.\n",
+    "\n",
+    "the classes are called \"dist\" but all apply to kernels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_basic_motions\n",
+    "\n",
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_basic_motions(return_type=\"numpy3D\")\n",
+    "X = X[:3]\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example 1: flat Gaussian RBF kernel between time series\n",
+    "from sklearn.gaussian_process.kernels import RBF\n",
+    "from sktime.dists_kernels import FlatDist\n",
+    "\n",
+    "flat_gaussian_tskernel = FlatDist(RBF(length_scale=10))\n",
+    "flat_gaussian_tskernel.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_gaussian_tskernel(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example 2: mean pairwise cosine distance - we've already seen AggrDist a couple times\n",
+    "from sktime.dists_kernels import AggrDist, ScipyDist\n",
+    "\n",
+    "mean_cos_tsdist = AggrDist(ScipyDist(metric=\"cosine\"))\n",
+    "mean_cos_tsdist.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_cos_tsdist(X)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Searching for pairwise transformers"
    ]
   },
   {
@@ -391,15 +605,9 @@
     "As with all `sktime` objects, we can use the `registry.all_estimators` utility to display all transformers in `sktime`.\n",
     "\n",
     "The relevant scitypes are:\n",
-    "* `\"transformer\"` for all transformers (as in Section 2.2)\n",
-    "* `\"transformer-pairwise\"` for all pairwise transformers on tabular data (as in Section 2.4)\n",
-    "* `\"transformer-panel\"` for all pairwise transformers on panel data (as in Section 2.3)\n",
-    "\n",
-    "To filter transformers (`\"transformer\"` scitype) further by input and output, use tags, most importantly:\n",
-    "* `\"scitype:transform-output\"` - the output scitype that the transform produces. `Series` for time series, `Primitives` for primitive features (float, categories).\n",
-    "* `\"scitype:instancewise\"` - whether transform uses all samples or acts by instance. If `True`, this is simply a vectorized operation per series. If `False`, then fitting on a single series does not have the same result as fitting on multiple.\n",
-    "\n",
-    "These and further tags will be explained in more detail in Section 2."
+    "* `\"transformer\"` for all transformers\n",
+    "* `\"transformer-pairwise\"` for all pairwise transformers on tabular data\n",
+    "* `\"transformer-panel\"` for all pairwise transformers on panel data"
    ]
   },
   {
@@ -409,30 +617,6 @@
    "outputs": [],
    "source": [
     "from sktime.registry import all_estimators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# listing all pairwise panel transformers - distances, kernels on time series\n",
-    "all_estimators(\"transformer\", as_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now subset to transformers that extract scalar features\n",
-    "all_estimators(\n",
-    "    \"transformer\",\n",
-    "    as_dataframe=True,\n",
-    "    filter_tags={\"scitype:transform-output\": \"Primitives\"},\n",
-    ")"
    ]
   },
   {
@@ -453,6 +637,14 @@
    "source": [
     "# listing all pairwise panel transformers - distances, kernels on time series\n",
     "all_estimators(\"transformer-pairwise-panel\", as_dataframe=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WIP FROM HERE"
    ]
   },
   {
