--- a/notebooks/03_distances_kernels_alignment.ipynb
+++ b/notebooks/03_distances_kernels_alignment.ipynb
@@ -506,6 +506,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative call with transform:\n",
+    "my_tabular_dist.transform(X_tabular, X2_tabular)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# as with pairwise panel transformers, one arg means second is the same\n",
+    "my_tabular_dist(X_tabular)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -594,7 +614,284 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.4 Searching for pairwise transformers"
+    "## 3.4 alignment algorithms, aka aligners"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* \"aligners\" find a new index set for 2 or more time series so they become \"similar\"\n",
+    "* new index set being a non-linear reparameterization of the old index sets\n",
+    "* often, aligners also produce an overall distance between the two series"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.1 aligners - general interface"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "aligner methods:\n",
+    "\n",
+    "* `fit` - computes alignment\n",
+    "* `get_alignment` - returns reparametrized indices, also called \"alignment path\"\n",
+    "* `get_aligned` returns reparametrized series\n",
+    "* `get_distance` returns distance between the two aligned series - only available if `\"capability:get_distance\"`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's try to align two leaves from osuleaf!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_osuleaf(return_type=\"pd-multiindex\")\n",
+    "\n",
+    "X1 = X.loc[0]  # leaf 0\n",
+    "X2 = X.loc[1]  # leaf 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.utils.plotting import plot_series\n",
+    "\n",
+    "plot_series(X1, X2, labels=[\"leaf_1\", \"leaf_2\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.alignment.dtw_python import AlignerDTW\n",
+    "\n",
+    "# use dtw-python package for aligning\n",
+    "# simple univariate alignment algorithm with default params\n",
+    "aligner = AlignerDTW()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aligner.fit([X1, X2])  # series to align need to be passed as list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alignment path\n",
+    "aligner.get_alignment()\n",
+    "\n",
+    "# this aligns, e.g.:\n",
+    "# from row \"2\": aligns index 0 in X1 with index 2 of X2\n",
+    "# from row \"664\": aligns index 424 in X1 with index 423 of X2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# obtain the aligned versions of the two series\n",
+    "X1_al, X2_al = aligner.get_aligned()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.utils.plotting import plot_series\n",
+    "\n",
+    "plot_series(X1_al.reset_index(drop=True), X2_al.reset_index(drop=True), labels=[\"leaf_1\", \"leaf_2\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the DTW aligner has a \"distance\" implemented\n",
+    "\n",
+    "intuitively, it is a distance that sums distance after aligning, and the amount of stretch:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the AlignerDTW class (based on dtw-python) doesn't just align, it also produces a distance\n",
+    "aligner.get_tags()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is the distance between the two time series we aligned\n",
+    "aligner.get_distance()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.2 alignment based time series distances"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the `DistFromAligner` wrapper simply computes distance per pair of aligned series.\n",
+    "\n",
+    "This turns any aligner into a time series distance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.alignment.dtw_python import AlignerDTW\n",
+    "from sktime.dists_kernels.compose_from_align import DistFromAligner\n",
+    "\n",
+    "# dynamic time warping distance - this is multivariate\n",
+    "dtw_dist = DistFromAligner(AlignerDTW())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_osuleaf(return_type=\"numpy3D\")\n",
+    "\n",
+    "X1 = X[:3]\n",
+    "X2 = X[5:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtw_distmat = dtw_dist(X1, X2)\n",
+    "dtw_distmat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtw_distmat.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.5 revisiting the initial example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.alignment.dtw_python import AlignerDTWfromDist\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.dists_kernels.compose_from_align import DistFromAligner\n",
+    "from sktime.dists_kernels.scipy_dist import ScipyDist\n",
+    "\n",
+    "# Mahalanobis distance on R^n\n",
+    "mahalanobis_dist = ScipyDist(metric=\"mahalanobis\")  # uses scipy distances\n",
+    "\n",
+    "# pairwise multivariate aligner from dtw-python with Mahalanobis distance\n",
+    "mw_aligner = AlignerDTWfromDist(mahalanobis_dist)  # uses dtw-python\n",
+    "\n",
+    "# turning this into alignment distance on time series\n",
+    "dtw_dist = DistFromAligner(mw_aligner)  # interface mutation to distance\n",
+    "\n",
+    "# and using this distance in a k-nn classifier\n",
+    "clf = KNeighborsTimeSeriesClassifier(distance=dtw_dist)  # uses sklearn knn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* we build an sequence alignment algorithm (`dtw-python`) using `scipy` Mahalanobis dist\n",
+    "* we get the distance matrix computation from alignment algorithm\n",
+    "* we use that distance matrix in `sklearn` knn\n",
+    "* together this is a time series classifier!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.6 Searching for distances, kernels, transformers"
    ]
   },
   {
@@ -605,9 +902,11 @@
     "As with all `sktime` objects, we can use the `registry.all_estimators` utility to display all transformers in `sktime`.\n",
     "\n",
     "The relevant scitypes are:\n",
-    "* `\"transformer\"` for all transformers\n",
+    "\n",
     "* `\"transformer-pairwise\"` for all pairwise transformers on tabular data\n",
-    "* `\"transformer-panel\"` for all pairwise transformers on panel data"
+    "* `\"transformer-panel\"` for all pairwise transformers on panel data\n",
+    "* `\"aligner\"` for all time series aligners\n",
+    "* `\"transformer\"` for all transformers, these can be composed with all the aboev"
    ]
   },
   {
@@ -617,6 +916,16 @@
    "outputs": [],
    "source": [
     "from sktime.registry import all_estimators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# listing all pairwise panel transformers - distances, kernels on time series\n",
+    "all_estimators(\"transformer-pairwise-panel\", as_dataframe=True)"
    ]
   },
   {
@@ -635,8 +944,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# listing all pairwise panel transformers - distances, kernels on time series\n",
-    "all_estimators(\"transformer-pairwise-panel\", as_dataframe=True)"
+    "# listing all alignment algorithms that can produce distances\n",
+    "all_estimators(\"aligner\", as_dataframe=True, filter_tags={\"capability:distance\": True})"
    ]
   },
   {
@@ -644,7 +953,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WIP FROM HERE"
+    "## 3.7 Outlook, roadmap\n",
+    "\n",
+    "* deep learning based time series distances\n",
+    "* distances based on time series clustering\n",
+    "* `numba` optimizations\n",
+    "* adding more kernels - most pairwise transformers are distances\n",
+    "* further maturing the time series alignment module"
    ]
   },
   {
@@ -652,15 +967,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.5 Outlook, roadmap"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.6 Summary"
+    "## 3.8 Summary"
    ]
   },
   {
