--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -22,31 +22,17 @@
    "source": [
     "# 2. Learning tasks - Classification, Regression, Clustering & more\n",
     "\n",
-    "#### What are Panel tasks?\n",
+    "deal with *collections of time series* = \"panel data\"\n",
     "\n",
-    "Panel tasks refers to a type of learning problem where a Panel of data is employed, simply refered to as Panel Data.\n",
+    "Classification = try to assign one *category* per time series, after training on time series/category examples\n",
     "\n",
-    "Panel Data comprises of multiple time series entities/instances, where a single time series component looks like:\n",
+    "Example: osuleaf - circumference point distance of leaves. Predict type of tree\n",
     "\n",
-    "<INSERT TIME-SERIES, Image-1>\n",
+    "Regression = try to assign one *category* per time series, after training on time series/category examples\n",
     "\n",
-    "Hence, Panel Data can be visualized as follows:\n",
+    "Example: temperature/pressure/time profile of chemical reactor. Predict total purity (fraction of 1)\n",
     "\n",
-    "<INSERT PANEL-DATA, Image-2>\n",
-    "\n",
-    "As per the kind of response variable and goal of the task, we can define different tasks - all of them are synonymous to time-independent (often called as Cross-sectional) data:\n",
-    "1. _Classification_: The response variable is a label (Good / bad, ratings between 0 and 5 - 0, 1, 2, 3, 4, 5)\n",
-    "    <INSERT CLASSIFICATION-BOXES, Image-3>\n",
-    "2. _Regression_: The response variable is continuous (floating point, integers)\n",
-    "    <INSERT REGRESSION-PLOT FROM `utils.load_experiments(variables=\"pressure\"), Image-4`>\n",
-    "3. _Clustering_: There are no response variables here, the goal of this task is to group entities that are \"similar\" to each other.\n",
-    "    <INSERT CLUSTERING-PLOT, Image-5>\n",
-    "4. _Forecasting_: Given historical data, predict the (near future) values by capturing temporal dependencies and patterns within each panel.\n",
-    "    <TODO - Think of what image to add here, Image-6>\n",
-    "5. _TODO: Add more obscure tasks (causal inference, survival analysis) or something more relevant to the talk - distances and kernel based_\n",
-    "    <TODO - Think of what image to add here, Image-7>\n",
-    "\n",
-    "NOTE - same formats used for forecasting, transformers, etc"
+    "Clustering = put different time series in a small number of similarity buckets"
    ]
   },
   {
@@ -481,7 +467,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# y is a 1D np.ndarray of labels - same length as number of instances in X_train\n",
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# step 3 - specify the classifier\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
     "\n",
     "# example 1 - 3-NN with simple dynamic time warping distance (requires numba)\n",
     "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
