--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -586,8 +586,11 @@
     "\n",
     "# step 3 - specify the classifier\n",
     "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.dists_kernels.compose_tab_to_panel import AggrDist\n",
+    "from sktime.dists_kernels import ScipyDist\n",
     "\n",
-    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
+    "mean_eucl_dist = AggrDist(ScipyDist())\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3, distance=mean_eucl_dist)\n",
     "\n",
     "# step 4 - fit/train the classifier\n",
     "clf.fit(X_train, y_train)\n",
@@ -631,7 +634,13 @@
     "X_test, y_test = load_osuleaf(split=\"test\", return_type=\"pd-multiindex\")\n",
     "\n",
     "# step 3-5 are the same\n",
-    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.dists_kernels.compose_tab_to_panel import AggrDist\n",
+    "from sktime.dists_kernels import ScipyDist\n",
+    "\n",
+    "mean_eucl_dist = AggrDist(ScipyDist())\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3, distance=mean_eucl_dist)\n",
+    "\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)\n",
     "\n",
