--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -580,9 +580,9 @@
     "# steps 1, 2 - prepare osuleaf dataset (train and new)\n",
     "from sktime.datasets import load_osuleaf\n",
     "\n",
-    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"pd-multiindex\")\n",
-    "X_new, _ = load_osuleaf(split=\"test\", return_type=\"pd-multiindex\")\n",
-    "X_new = X_new.loc[:2]  # smaller dataset for faster notebook runtime\n",
+    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"numpy3D\")\n",
+    "X_new, _ = load_osuleaf(split=\"test\", return_type=\"numpy3D\")\n",
+    "X_new = X_new[:2]  # smaller dataset for faster notebook runtime\n",
     "\n",
     "# step 3 - specify the classifier\n",
     "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
@@ -630,8 +630,10 @@
     "from sktime.datasets import load_osuleaf\n",
     "\n",
     "# data should be split inti train/test\n",
-    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"pd-multiindex\")\n",
-    "X_test, y_test = load_osuleaf(split=\"test\", return_type=\"pd-multiindex\")\n",
+    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"numpy3D\")\n",
+    "X_test, y_test = load_osuleaf(split=\"test\", return_type=\"numpy3D\")\n",
+    "X_test = X_test[:2]\n",
+    "y_test = y_test[:2]\n",
     "\n",
     "# step 3-5 are the same\n",
     "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
