--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -3086,7 +3086,7 @@
     "\n",
     "### Credits: notebook 2 - time series panel tasks - classification, regression, clustering\n",
     "\n",
-    "notebook creation: "
+    "notebook creation: fkiraly, achieveordie"
    ]
   }
  ],
