--- a/notebooks/03_distances_kernels_alignment.ipynb
+++ b/notebooks/03_distances_kernels_alignment.ipynb
@@ -266,24 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pairwise panel transformers are `scikit-learn` / `scikit-base` interface compatible like everything else:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean_euc_dist.get_params()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pairwise transformers are composable, and use the familiar `get_params` interface, just like any other `sktime` object and `scikit-learn` estimator:"
+    "pairwise panel transformers are `scikit-learn` / `scikit-base` interface compatible and composable, like everything else in `sktime`:"
    ]
   },
   {
@@ -955,11 +938,12 @@
    "source": [
     "## 3.7 Outlook, roadmap\n",
     "\n",
-    "* deep learning based time series distances\n",
-    "* distances based on time series clustering\n",
-    "* `numba` optimizations\n",
-    "* adding more kernels - most pairwise transformers are distances\n",
-    "* further maturing the time series alignment module"
+    "* implementing estimators - distances, classifiers, etc\n",
+    "* backend optimizations - `numba`, distributed/parallel\n",
+    "* sequence-to-sequence regression, classification\n",
+    "* further maturing the time series alignment module\n",
+    "\n",
+    "join and contribute!"
    ]
   },
   {
@@ -975,11 +959,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "### Credits: notebook 3 - distances, kernels, alignment\n",
-    "\n",
-    "notebook creation: "
+    "* `sktime` - modular framework for learning with time series\n",
+    "* panel data = collections of time series - tasks classification, regression, clustering\n",
+    "* build flexible pipelines with transformers, tune via grid search etc\n",
+    "* panel estimators typically rely on time series distances, kernels, aligners\n",
+    "* TS distances, kernels, aligners can also be constructed in modular, flexible way\n",
+    "* all objects above are first-class citiziens with `sklearn`-like interface!"
    ]
   },
   {
@@ -1003,7 +988,11 @@
     "\n",
     "Opportunities:\n",
     "\n",
-    "* sktime **mentoring programme**: github.com/sktime/mentoring"
+    "* sktime **mentoring programme**: github.com/sktime/mentoring\n",
+    "* help develop our future governance model\n",
+    "* register as a user!\n",
+    "\n",
+    "https://opendatascience.com/sktime-python-toolbox-for-machine-learning-with-time-series/"
    ]
   }
  ],
