adding missing image

--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -728,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: INSERT HELPFUL PICTURE HERE"
+    "![](./img/tasks-tsc.png)"
    ]
   },
   {
